--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,16 @@
 <html>
+<head>
+<title>Prueba</title>
+</head>
 <body>
+<center>
+<table>
+<tr>
+<td>
 <marquee><h1>hola mundo</h1></marquee>
+</td>
+<tr>
+</table>
+</center>
 </body>
 </html>
